--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "antd": "^4.15.6",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "next": "10.2.2",
+    "qrcode.react": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
